@@ -1,19 +1,15 @@
 package com.example.excursionPlanning.controllers.web;
 
-import com.example.excursionPlanning.dto.CommentDTO;
 import com.example.excursionPlanning.dto.ExcursionDTO;
 import com.example.excursionPlanning.dto.MonumentDTO;
-import com.example.excursionPlanning.facade.CommentFacade;
-import com.example.excursionPlanning.facade.ExcursionFacade;
-import com.example.excursionPlanning.facade.ImageModelFacadeResponse;
-import com.example.excursionPlanning.facade.MonumentFacade;
-import com.example.excursionPlanning.payload.web.ExcursionRequest;
-import com.example.excursionPlanning.payload.web.ImageModelResponse;
-import com.example.excursionPlanning.payload.web.MonumentRequest;
-import com.example.excursionPlanning.payload.web.MonumentResponse;
+import com.example.excursionPlanning.entity.Excursion;
+import com.example.excursionPlanning.entity.Monument;
+import com.example.excursionPlanning.facade.*;
+import com.example.excursionPlanning.payload.web.*;
 import com.example.excursionPlanning.services.interfaces.ExcursionService;
 import com.example.excursionPlanning.services.interfaces.ImageModelService;
 import com.example.excursionPlanning.services.interfaces.MonumentService;
+import com.example.excursionPlanning.services.interfaces.UserService;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
@@ -22,7 +18,9 @@ import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
 
 import java.security.Principal;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping(value = "/web/excursions")
@@ -30,6 +28,9 @@ public class ExcursionController {
 
     @Autowired
     private MonumentService monumentService;
+
+    @Autowired
+    private UserService userService;
 
     @Autowired
     private ExcursionService excursionService;
@@ -42,6 +43,12 @@ public class ExcursionController {
 
     @Autowired
     private MonumentFacade monumentFacade;
+
+    @Autowired
+    private ExcursionResponseFacade excursionResponseFacade;
+
+    @Autowired
+    private MonumentExcursionResponseFacade monumentExcursionResponseFacade;
 
     @GetMapping(value = "/new")
     public String getFormForCreateNewOne(Model model) {
@@ -60,9 +67,9 @@ public class ExcursionController {
         if (bindingResult.hasErrors()) {
             return "createExcursion";
         }
-
+        Excursion excursion = null;
         try {
-            excursionService.createExcursion(excursionRequest, principal)
+            excursion = excursionService.createExcursion(excursionRequest, principal)
                     .orElseThrow(() -> new RuntimeException("Excursion can't be created"));
 
         } catch (RuntimeException e) {
@@ -70,12 +77,12 @@ public class ExcursionController {
             model.addAttribute("error", e.getMessage());
             return "createExcursion";
         }
-        return "redirect:/web/excursions";
+        return "redirect:/web/excursions/" + excursion.getId();
 
 
     }
 
-    @PostMapping(value = "/{id}/like")
+    @GetMapping(value = "/{id}/like")
     public String likeExcursion(Principal principal,
                                 @PathVariable String id,
                                 Model model) {
@@ -84,9 +91,9 @@ public class ExcursionController {
             excursionService.like(Long.parseLong(id), principal);
         } catch (Exception e) {
             model.addAttribute("error", e.getMessage());
-            return "redirect:/web/excursions";
+
         }
-        return "redirect:/web/excursions";
+        return "redirect:/web/excursions/" + id;
 
     }
 
@@ -98,51 +105,132 @@ public class ExcursionController {
     }
 
     @PatchMapping()
-    public String updateMonumentInfo(@Valid @ModelAttribute("excursion") ExcursionDTO excursion,
-                                     BindingResult bindingResult,
-                                     Principal principal, Model model) {
+    public String updateExcursionInfo(@Valid @ModelAttribute("excursion") ExcursionEditRequest excursion,
+                                      BindingResult bindingResult,
+                                      Principal principal, Model model) {
+
 
         if (bindingResult.hasErrors()) {
             return "editExcursion";
         }
 
         ExcursionDTO savedExcursion = null;
+
+
         try {
-            savedExcursion = ExcursionFacade.convertExcursionToExcursionDTO(excursionService.patchExcursion(excursion, principal)
-                    .orElseThrow(() -> new RuntimeException("Excursion not updated")));
+            savedExcursion = ExcursionFacade
+                    .convertExcursionToExcursionDTO(excursionService
+                            .patchExcursion(excursion, principal)
+                            .orElseThrow(() -> new RuntimeException("Excursion not updated")));
 
         } catch (Exception e) {
             model.addAttribute("error", e.getMessage());
             model.addAttribute("excursion", excursion);
+            System.out.println(e.getMessage());
             return "editExcursion";
         }
 
         model.addAttribute("excursion", savedExcursion);
-        return "excursionPage";
+        return "redirect:/web/excursions/" + excursion.getId();
 
     }
 
     @GetMapping(value = "/{id}/edit")
-    public String editMonumentById(@PathVariable("id") String id,
-                                   Principal principal,
-                                   Model model) {
+    public String editExcursionById(@PathVariable("id") String id,
+                                    Model model) {
         ExcursionDTO excursion = null;
         try {
             excursion = ExcursionFacade
                     .convertExcursionToExcursionDTO(excursionService
-                            .getExcursionById(Long.parseLong(id), principal)
+                            .getExcursionById(Long.parseLong(id))
                             .orElseThrow(() -> new RuntimeException("Excursion not updated")));
 
         } catch (Exception e) {
             model.addAttribute("error", e.getMessage());
         }
         model.addAttribute("excursion", excursion);
+        model.addAttribute("monuments", monumentService.getAllMonuments());
         return "editExcursion";
 
     }
 
+//    @GetMapping(value = "/{id}/editMonumentsList")
+//    public String editeMonumentsList(@PathVariable("id") String id,
+//                                     Principal principal,
+//                                     Model model) {
+//        Excursion excursion = null;
+//        try {
+//            excursion = excursionService
+//                    .getExcursionById(Long.parseLong(id))
+//                    .orElseThrow(() -> new RuntimeException("Excursion not updated"));
+//
+//        } catch (Exception e) {
+//            model.addAttribute("error", e.getMessage());
+//        }
+//
+//        MonumentListEdit monumentListEdit = new MonumentListEdit();
+//        monumentListEdit.setId(Long.parseLong(id));
+//        monumentListEdit.setMonuments(excursion.getMonuments());
+//
+//        model.addAttribute("monumentList", monumentListEdit);
+//        model.addAttribute("monuments", monumentService.getAllMonuments());
+//        return "editMonumentsList";
+//
+//    }
+//
+//    @PostMapping(value = "/{id}/editMonumentsList")
+//    public String editeMonumentsListPost(@PathVariable("id") String id,
+//                                         Principal principal,
+//                                         Model model) {
+//        ExcursionDTO excursion = null;
+//        try {
+//            excursion = ExcursionFacade
+//                    .convertExcursionToExcursionDTO(excursionService
+//                            .getExcursionById(Long.parseLong(id))
+//                            .orElseThrow(() -> new RuntimeException("Excursion not updated")));
+//
+//        } catch (Exception e) {
+//            model.addAttribute("error", e.getMessage());
+//        }
+//        model.addAttribute("excursion", excursion);
+//        return "editMonumentsList";
+//
+//    }
+//
+//    @DeleteMapping("/{excursionId}/deleteMonument/{monumentId}")
+//    public String DeleteMonumentInExcursion(@PathVariable("excursionId") String excursionId,
+//                                            Principal principal,
+//                                            @PathVariable("monumentId") String monumentId,
+//                                            Model model) {
+//
+//
+//        Excursion excursion = null;
+//        try {
+//            excursion = excursionService
+//                    .getExcursionById(Long.parseLong(excursionId))
+//                    .orElseThrow(() -> new RuntimeException("Excursion not updated"));
+//
+//            MonumentListEdit monumentList = new MonumentListEdit();
+//            monumentList.setId(Long.parseLong(excursionId));
+//
+//            monumentList.setMonuments(excursion
+//                    .getMonuments()
+//                    .stream()
+//                    .filter(x -> !x.getId().equals(Long.parseLong(monumentId)))
+//                    .collect(Collectors.toList()));
+//
+//            excursionService.putMonumentsToExcursion(monumentList, principal);
+//
+//
+//        } catch (Exception e) {
+//            model.addAttribute("error", e.getMessage());
+//        }
+//        return "redirect:/web/excursions/" + excursionId + "/editMonumentsList";
+//
+//    }
+
     @DeleteMapping("/{id}")
-    public String DeleteMonumentById(@PathVariable("id") String id, Principal principal) {
+    public String DeleteExcursionById(@PathVariable("id") String id, Principal principal) {
 
         excursionService.deleteExcursion(Long.parseLong(id), principal);
 
@@ -154,26 +242,32 @@ public class ExcursionController {
                                   Principal principal,
                                   Model model) {
         ExcursionDTO excursionDTO = null;
-
+        ExcursionResponse excursionResponse = null;
         try {
             excursionDTO = excursionFacade
                     .convertExcursionToExcursionDTO(excursionService
-                            .getExcursionById(Long.parseLong(id), principal)
+                            .getExcursionById(Long.parseLong(id))
                             .orElseThrow(() -> new RuntimeException("Monument not found")));
+
+            excursionResponse = excursionResponseFacade.
+                    convertExcursionDTOToExcursionResponse(excursionDTO);
 
         } catch (Exception e) {
             model.addAttribute("error", e.getMessage());
         }
-        model.addAttribute("excursion", excursionDTO);
+
+
+        model.addAttribute("excursion", excursionResponse);
+        model.addAttribute("guide", userService.getUserById(excursionDTO.getGuideId()).get());
 
 
         try {
 
-            List<MonumentDTO> monuments = monumentService
-                    .getMonumentsByExcursionId(Long.parseLong(id))
+            List<MonumentExcursionResponse> monuments = excursionResponse
+                    .getMonuments()
                     .stream()
-                    .map(monumentFacade::convertMonumentToMonumentDTO)
-                    .toList();
+                    .map(monumentExcursionResponseFacade::convertMonumentDTOToMonumentExcursionResponse)
+                    .collect(Collectors.toList());
 
 
             model.addAttribute("monuments", monuments);
@@ -181,11 +275,28 @@ public class ExcursionController {
 
         } catch (Exception e) {
             model.addAttribute("error", e.getMessage());
-
+            System.out.println(e.getMessage());
         }
 
         return "excursionPage";
 
+
+    }
+
+    @DeleteMapping("/{excursionId}/deletePhoto")
+    public String deleteUserPhoto(Principal principal,
+                                  @PathVariable("excursionId") String excursionId,
+                                  Model model) {
+        try {
+
+            excursionService.deletePhoto(Long.parseLong(excursionId), principal)
+                    .orElseThrow(() -> new RuntimeException("User not found"));
+        } catch (Exception e) {
+            model.addAttribute("error", e.getMessage());
+
+        }
+
+        return "redirect:/web/excursions/" + excursionId;
 
     }
 
